vbnc/vbnc/tests/Errors/30311-56.vb
Option Strict Off
Class UserDefinedNullableConversions1
    Shared Function Main() As Integer
        Dim c As Char
        Dim d As Double
        d = c
    End Function

End Class